# sicario-spec

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  MANIFEST.in  README.md  SECURITY.md  SUBMISSION.md  SUPPORT.md  USAGE.md  bundle.yml  pyproject.toml  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  control_map.yml  feature_request.yml  maintenance_task.yml  security_hardening.yml
.github/requirements/: release-build.txt
.github/workflows/: codeql.yml  issue-triage.yml  pages.yml  publish-pypi.yml  release.yml  scorecard.yml  test.yml
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/presets/: .registry
.specify/workflows/: workflow-registry.json
catalogs/: bundles.json  extensions.json  presets.json
control_maps/: README.md  ai-rmf-sicario.json  ccm-v4.1-sicario.json  eu-ai-act-sicario.json  hipaa-security-rule-sicario.json  iso-27001-2022-sicario.json  nist-800-53-r5-sicario.json  owasp-asvs-sicario.json  pci-dss-v4.0-sicario.json  sox-404-itgc-sicario.json  ssdf-800-218-sicario.json
demo/: DEMO.md  record.sh  run.sh  scenario.sh  verify-demo.cast
docs/: adoption-and-launch.md  agent-environments.md  agent-fleet.md  architecture.md  bundle-readiness.md  bundle-walkthrough.md  catalog-submission.md  cloud-iac.md  completeness-matrix.md  control-maps.md  docs-and-diagrams.md  docs-impact.md  extensions.md  getting-started.md  machine-user-pr-flow.md  maintainer-operations.md  openssf.md  presets.md  profiles.md  release-process.md  repository-settings.md  rule-engine.md  security-model.md  vendor-evaluation.md
docs-site/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/architecture/: system-context.md
docs/compliance/: control-applicability.md  evidence-index.md
docs/diagrams/: system-context.mmd
docs/governance/: data-classification.md  tagging-taxonomy.md
docs/risk/: accepted-risk-log.md  risk-register.md  security-exceptions.md
docs/security/: abuse-cases.md  threat-model.md
presets/: sicario_core.py  sicario_docs.py
scripts/: build_release_assets.py  generate_repo_map.py  smoke_bundle_install.sh
sicario_cli/: __init__.py  _render.py  cli.py  version.py
tests/: benchmark_verify.py  test_release_metadata.py  test_sicario.py
workflow_templates/: docs-site.yml  security-toolchain.yml
(+197 files in other folders)
