[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sicario-spec"
version = "0.1.0"
description = "Secure-by-default governance bundle for GitHub Spec Kit."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "SicarioSpec Contributors" }]
keywords = ["spec-kit", "appsec", "devsecops", "ai-security", "governance"]
dependencies = []

[project.scripts]
sicario = "sicario_cli.cli:main"

[tool.setuptools.packages.find]
include = ["sicario_cli*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
sicario_cli = ["assets/**/*"]

[tool.ruff]
line-length = 100
target-version = "py39"
