[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "sicario-spec"
version = "0.3.0"
description = "Secure-by-default governance bundle for GitHub Spec Kit."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "SicarioSpec Contributors", email = "dfirs1car1o@users.noreply.github.com" }]
keywords = ["spec-kit", "appsec", "devsecops", "ai-security", "governance"]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/dfirs1car1o/sicario-spec"
Documentation = "https://dfirs1car1o.github.io/sicario-spec/"
Repository = "https://github.com/dfirs1car1o/sicario-spec"
Issues = "https://github.com/dfirs1car1o/sicario-spec/issues"
Changelog = "https://github.com/dfirs1car1o/sicario-spec/blob/main/CHANGELOG.md"

[project.scripts]
sicario = "sicario_cli.cli:main"

[tool.setuptools.packages.find]
include = ["sicario_cli*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
sicario_cli = ["assets/**/*"]

[tool.ruff]
line-length = 100
target-version = "py39"
